# reward-campaign-helper

./: Cargo.toml  README.md  chain-metadata.scale
res/: contributers.json  input.json
src/: main.rs
