[package]
name = "reward-campaign-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = { git = "https://github.com/paritytech/subxt" }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive", "full", "bit-vec"] }
sp-core = "18.0.0"
sp-keyring = "20.0.0"
tokio = { version = "1.26", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", feature = ["derive"] }
lazy_static = "1"